--- a/features/home/src/main/res/layout/separator_view_item.xml
+++ b/features/home/src/main/res/layout/separator_view_item.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/separator_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textColor="@android:color/background_dark"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+
+    <View
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="10000+ stars" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginVertical="16dp"
+        android:id="@+id/divider"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@android:color/black" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
