--- a/features/home/src/main/res/layout/repo_view_item.xml
+++ b/features/home/src/main/res/layout/repo_view_item.xml
@@ -5,83 +5,116 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="8dp"
-    android:paddingTop="16dp"
-    tools:ignore="UnusedAttribute">
+    android:paddingVertical="16dp">
+
+    <ImageView
+        android:id="@+id/user_img"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:src="@drawable/ic_git_fork" />
+
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="@id/user_img"
+        app:layout_constraintEnd_toEndOf="@id/user_img"
+        app:layout_constraintTop_toBottomOf="@id/user_img"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        tools:text="User name by Matheus Paes Crescencio"
+        android:maxLines="3"
+        android:paddingHorizontal="2dp"
+        android:ellipsize="end"
+        android:textStyle="bold"
+        android:textSize="14sp" />
+
 
     <TextView
         android:id="@+id/repo_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:paddingHorizontal="8dp"
         android:textColor="@android:color/background_dark"
         android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/user_img"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="android-architecture" />
+        tools:text="android-architecture com um texto extremamente gigante" />
+
+    <TextView
+        android:id="@+id/repo_language"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:paddingHorizontal="8dp"
+        app:layout_constraintTop_toBottomOf="@id/repo_name"
+        app:layout_constraintStart_toStartOf="@id/repo_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="Javascript"/>
 
     <TextView
         android:id="@+id/repo_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:maxLines="10"
-        android:paddingVertical="8dp"
+        android:padding="8dp"
         android:textColor="?android:textColorPrimary"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repo_name"
-        tools:ignore="UnusedAttribute"
-        tools:text="A collection of samples to discuss and showcase different architectural tools and patterns for Android apps." />
-
-    <TextView
-        android:id="@+id/repo_language"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:paddingVertical="16dp"
-        android:text="Linguagem"
-        android:textSize="11sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repo_description"
-        tools:ignore="RtlCompat" />
+        app:layout_constraintStart_toStartOf="@id/repo_name"
+        app:layout_constraintTop_toBottomOf="@+id/repo_language"
+        tools:text="A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc vA collection of samples to discuss and showcase different arc. A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc v v A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc A collection of samples to discuss and showcase different arc" />
 
     <ImageView
         android:id="@+id/star"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="8dp"
         android:src="@android:drawable/star_on"
-        app:layout_constraintBottom_toBottomOf="@+id/repo_stars"
-        app:layout_constraintEnd_toStartOf="@+id/repo_stars"
-        app:layout_constraintTop_toTopOf="@+id/repo_stars" />
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="@+id/user_name"
+        app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
     <TextView
         android:id="@+id/repo_stars"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingVertical="8dp"
+        android:ellipsize="end"
+        android:layout_marginHorizontal="4dp"
+        android:maxLines="1"
         android:textSize="11sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/repo_forks"
-        app:layout_constraintEnd_toStartOf="@id/forks"
-        tools:text="30" />
+        app:layout_constraintBottom_toBottomOf="@id/star"
+        app:layout_constraintEnd_toEndOf="@+id/user_name"
+        app:layout_constraintStart_toEndOf="@+id/star"
+        app:layout_constraintTop_toTopOf="@id/star"
+        tools:text="30000" />
 
     <ImageView
         android:id="@+id/forks"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
-        android:src="@android:drawable/ic_dialog_email"
-        app:layout_constraintBottom_toBottomOf="@+id/repo_forks"
-        app:layout_constraintEnd_toStartOf="@+id/repo_forks"
-        app:layout_constraintTop_toTopOf="@+id/repo_forks" />
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:src="@drawable/ic_git_fork"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="@+id/user_name"
+        app:layout_constraintTop_toBottomOf="@+id/star" />
 
     <TextView
         android:id="@+id/repo_forks"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingVertical="8dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textSize="11sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repo_description"
-        tools:text="30" />
+        android:layout_marginHorizontal="4dp"
+        app:layout_constraintBottom_toBottomOf="@id/forks"
+        app:layout_constraintEnd_toEndOf="@+id/user_name"
+        app:layout_constraintStart_toEndOf="@+id/forks"
+        app:layout_constraintTop_toTopOf="@id/forks"
+        tools:text="300000000000" />
 </androidx.constraintlayout.widget.ConstraintLayout>
